src/snapshots/noko__parser__tests__chech_negaitve-2.snap
---
source: src/parser.rs
expression: "parse(\"arst arst) arst (arst arst))\")"
---
Err(
    ParseErrors {
        source_code: "arst arst) arst (arst arst))",
        all: [
            Unexpected {
                found: Some(
                    ')',
                ),
                expected: [
                    '"',
                    '#',
                    '(',
                    '/',
                ],
                label: None,
            },
        ],
    },
)
