src/snapshots/noko__parser__tests__chech_negaitve-3.snap
---
source: src/parser.rs
expression: "parse(\" ( (#ufnst))\")"
---
Err(
    ParseErrors {
        source_code: " ( (#ufnst))",
        all: [
            Unexpected {
                found: Some(
                    'u',
                ),
                expected: [],
                label: None,
            },
        ],
    },
)
