src/snapshots/noko__parser__tests__chech_negaitve-4.snap
---
source: src/parser.rs
expression: "parse(\" ( (#111111111111))\")"
---
Err(
    ParseErrors {
        source_code: " ( (#111111111111))",
        all: [
            Unexpected {
                found: Some(
                    '1',
                ),
                expected: [
                    '"',
                    '#',
                    '(',
                    ')',
                    '/',
                ],
                label: None,
            },
        ],
    },
)
