src/snapshots/noko__parser__tests__chech_negaitve-5.snap
---
source: src/parser.rs
expression: "parse(\"( (#111) s (arst) ) arst RSt\")"
---
Err(
    ParseErrors {
        source_code: "( (#111) s (arst) ) arst RSt",
        all: [
            Unexpected {
                found: Some(
                    ')',
                ),
                expected: [],
                label: None,
            },
        ],
    },
)
