src/snapshots/noko__parser__tests__check_call-2.snap
---
source: src/parser.rs
expression: "parse(\"()\")"
---
Err(
    ParseErrors {
        source_code: "()",
        all: [
            Unexpected {
                found: Some(
                    ')',
                ),
                expected: [
                    '"',
                    '#',
                    '(',
                    '/',
                ],
                label: None,
            },
        ],
    },
)
