src/snapshots/noko__parser__tests__check_call-3.snap
---
source: src/parser.rs
expression: "parse(\"\")"
---
Err(
    ParseErrors {
        source_code: "",
        all: [
            Unexpected {
                found: None,
                expected: [
                    '"',
                    '#',
                    '(',
                    '/',
                ],
                label: Some(
                    SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: 0,
                    },
                ),
            },
        ],
    },
)
