src/snapshots/noko__parser__tests__check_call-4.snap
---
source: src/parser.rs
expression: "parse(\"( s s s ) arst RSt\")"
---
Ok(
    [
        Call(
            [
                Var(
                    "s",
                    2..3,
                ),
                Var(
                    "s",
                    4..5,
                ),
                Var(
                    "s",
                    6..7,
                ),
            ],
            0..10,
        ),
        Var(
            "arst",
            10..14,
        ),
        Var(
            "RSt",
            15..18,
        ),
    ],
)
