src/snapshots/noko__parser__tests__check_call-5.snap
---
source: src/parser.rs
expression: "parse(\"   (arstarst arst arst)\")"
---
Ok(
    [
        Call(
            [
                Var(
                    "arstarst",
                ),
                Var(
                    "arst",
                ),
                Var(
                    "arst",
                ),
            ],
        ),
    ],
)
