src/snapshots/noko__parser__tests__check_call-6.snap
---
source: src/parser.rs
expression: "parse(\"\\n\\n(test test2)\\n\\n\")"
---
Ok(
    [
        Call(
            [
                Var(
                    "test",
                    3..7,
                ),
                Var(
                    "test2",
                    8..13,
                ),
            ],
            2..16,
        ),
    ],
)
