src/snapshots/noko__parser__tests__check_call-7.snap
---
source: src/parser.rs
expression: "parse(\"(   str->int \\\"10\\\"//arst\\n)\")"
---
Ok(
    [
        Call(
            [
                Var(
                    "str->int",
                    4..12,
                ),
                StringLiteral(
                    "10",
                    13..17,
                ),
            ],
            0..25,
        ),
    ],
)
