src/snapshots/noko__parser__tests__check_color-2.snap
---
source: src/parser.rs
expression: "parse(\"  #111111  \")"
---
Ok(
    [
        ColorLiteral(
            "111111",
        ),
    ],
)
