src/snapshots/noko__parser__tests__check_color-3.snap
---
source: src/parser.rs
expression: "parse(\"#a1b2c3\")"
---
Ok(
    [
        ColorLiteral(
            "a1b2c3",
        ),
    ],
)
